styles.css
body {
    background-image: linear-gradient(to bottom right, rgb(160, 160, 230), rgb(96, 216, 156));
    background-attachment: fixed;
}

.task-column {
    float: left;
    width: 32.33%;
    min-height: 100vh;
    position: sticky;
    top: 0;
    background-image: linear-gradient(to bottom, rgba(100, 100, 100, 0.8), rgba(255, 255, 255, 0.2));
    border-radius: 10px;
    margin-right: 1%;
    overflow: auto;
    max-height: calc(100vh - 20px);

}

.task-column:hover {
    border-radius: 16px;
    transition: 0.4;
    background-image: linear-gradient(to bottom, gray, rgba(0, 255, 70, 0.3));
}

.task-column h3 {
    position: sticky;
    top: 0;
    background: rgb(200, 200, 200);
    margin: 0;
    margin-bottom: 8px;
    z-index: 10;
    padding: 10px;
    font-family: sans-serif;
    font-size: 20px;
    border-radius: 4px;
    border: 1.5px dashed rgb(0, 0, 80);
    box-shadow: 0 4px 2px rgba(70, 60, 255, 0.2), 0 -2px 2px rgba(70, 60, 255, 0.2);

}

.task-column h3 {
    position: sticky;
    top: 0;
    background: rgb(200, 200, 200);
    margin: 0;
    margin-bottom: 8px;
    z-index: 10;
    padding: 10px;
    font-family: sans-serif;
    font-size: 20px;
    border-radius: 4px;
    border: 1.5px dashed rgb(0, 0, 80);
    box-shadow: 0 4px 2px rgba(70, 60, 255, 0.2), 0 -2px 2px rgba(70, 60, 255, 0.2);
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.filter-button {
    background-color: transparent;
    border: none;
    cursor: not-allowed;
    font-size: 1.2em;
}

.column-title {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.column-title button {
    margin: .5rem;
    width: 90%;
}

.col-container {
    margin-left: 5%;
    margin-right: 5%;
}

.col-container:after {
    content: "";
    display: table;
    clear: both;
}

.accordion {
    background-color: rgba(255, 255, 255, 0.8);
    color: #444;
    cursor: pointer;
    padding: 18px;
    width: calc(100% - 40px);
    border: none;
    outline: none;
    margin: 10px 20px;
    font-family: sans-serif;
    font-size: 16px;
    font-weight: 600;
    border-radius: 6px;
    border: inset 1.5px black;
    text-shadow: 0px -1px 0px rgb(255, 255, 255);
}

.accordion:hover {
    border-radius: 10px;
    transition: 0.1s;
    border: inset 1.5px white;
    background-color: rgba(255, 255, 255, 0.95);

}

.task-plus {
    color: rgb(0, 0, 70);
    background-color: rgb(255, 255, 255, 0.7);
    cursor: pointer;
    padding: 8px;
    width: calc(100% - 40px);
    border-radius: 12px;
    border: none;
    outline: none;
    margin: 14px 20px;
    border: inset 2px black;
}

.task-plus:hover {

    transition: 0.2s;
    border: inset 2px white;
    background-color: rgba(255, 255, 255, 0.9);
}

h1 {
    text-shadow: 0px -4px 0px rgb(170, 220, 100), 0px -3px 2px rgb(0, 75, 0);
    color: rgb(0, 0, 50);
    text-align: center;
    margin-bottom: 30px;
    font-family: sans-serif;
    font-size: 40px;
    font-weight: 1000;
}

h3 {
    text-align: center;
    color: rgb(0, 0, 70);
    text-shadow: 0px -1.5px 0px rgb(100, 220, 190, 0.8), 0px -0.75px 2px rgb(0, 20, 75);

}

.panel {
    padding: 0 18px;
    display: none;
    overflow: hidden;
    transition: 0.4s;
    display: flex;
    flex-direction: column;
}

.taskbox {
    background-color: rgba(0, 0, 0, 0.4);
    border-radius: 6px;
    margin-bottom: 5px;
    margin-left: 2px;
    margin-right: 2px;
    border: dashed 1px rgb(200, 250, 200, 0.7);
}

.taskbox:hover {
    border: dashed 1px rgb(220, 250, 220, 1);
    transition: 0.2s;
}

.black {
    background-color: rgba(0, 0, 0, 0.6);
}

.red {
    background-color: rgba(255, 0, 0, 0.6);
}

.yellow {
    background-color: rgba(255, 255, 0, 0.6);
}

.green {
    background-color: rgba(0, 128, 0, 0.6);
}

.blue {
    background-color: rgba(0, 0, 255, 0.6);
}

.white {
    background-color: rgba(255, 255, 255, 0.6);
}

.btn-container {
    display: table;
    align-items: center;
    width: 100%;
}

.disabled {
    cursor: not-allowed;
    display: table-row;
    width: calc((100% / 4) - 1px);
    height: 24px;
    margin: 5px 0.5px;
    text-align: center;
    background-color: whitesmoke;
    opacity: 0.8;
    border-radius: 4px;
    font-size: 12px;
    border: outset 2px black;
}

.btn {
    display: table-row;
    width: calc((100% / 4) - 1px);
    height: 24px;
    margin: 5px 0.5px;
    text-align: center;
    background-color: whitesmoke;
    opacity: 0.8;
    border-radius: 4px;
    font-size: 12px;
    border: outset 2px black;
}

.btn:hover {
    cursor: pointer;
    opacity: 0.95;
    border-radius: 7px;
    transition: 0.2s;
    border: outset 2px white;
}

.panel p {
    text-align: left;
    font-family: sans-serif;
    font-size: 14px;
    color: white;
    word-wrap: break-word;
}

.hamburger {
    width: 35px;
    height: 5px;
    background-color: black;
    margin: 6px 0;
}

.overlay {
    display: none;
    position: fixed;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    background: rgba(0, 0, 0, 0.7);
    z-index: 998;
}

.hamburger-container {
    cursor: pointer;
    position: absolute;
    top: 2%;
    left: 3%;
    z-index: 1000;
}

.hamburger {
    width: 35px;
    height: 5px;
    background: rgb(0, 0, 70);
    margin: 6px 0;
    border-radius: 5px;
    transition: all 0.3s ease;
}

.menu {
    display: none;
    position: fixed;
    top: 0;
    left: 0;
    height: 180px;
    width: 150px;
    background-image: linear-gradient(to bottom, rgb(130, 150, 130, 0.9) 80%, rgba(0, 255, 70, 0.00));
    padding: 60px 10px;
    color: black;
    z-index: 999;
    font-family: sans-serif;
    font-weight: 600;
    font-size: 20px;
    color: rgb(0, 0, 70);
    border-radius: 7px;
}

.menu.open {
    display: block;
}

.overlay.open {
    display: block;
}

.hamburger-container.open .hamburger:nth-child(1) {
    transform: rotate(45deg) translate(6px, 6px);
    position: fixed;
}

.hamburger-container.open .hamburger:nth-child(2) {
    opacity: 0;
}

.hamburger-container.open .hamburger:nth-child(3) {
    transform: rotate(-45deg) translate(6px, -6px);
    position: fixed;
}

.menu ul {
    list-style: none;
    padding: 0;
}

.menu ul li {
    padding: 15px;
    border-bottom: 1px solid black;
}

.login:hover {
    background-color: #9cd7727e;
    border-radius: 4px;
}

.settings {
    cursor: not-allowed;
}

#no-click-zone {
    position: fixed;
    top: 0;
    height: 100%;
    width: 100%;
}

#modification-popup {
    position: fixed;
    width: 100%;
    height: 100%;
    display: none;
    flex-direction: column;
    top: 80px;
    justify-content: top;
    align-items: center;
    left: 0%;
}

.pop-up {
    width: 40%;
    max-width: 360px;
    position: absolute;
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 2% 3% 4% 3%;
    justify-content: center;
    background-color: rgba(120, 120, 190, 0.95);
    border: 2px dotted rgb(0, 0, 70);
    border-radius: 10px;
}

.w85 {
    width: 85%;
}

.modiCanc {
    margin-top: 1rem;
    font-family: sans-serif;
    font-size: 15px;
    display: flex;
    flex-direction: row;
}

.modiCanc button {
    width: 100%;
    margin: 12px 3px 0px;
    height: 140%;
    cursor: pointer;
    padding: 8px;
    border-radius: 7px;
    outline: none;
    background-color: rgba(255, 255, 255, 0.75);
    border: inset 1px black;
    font-size: 18px;
    font-weight: 500;
    color: rgb(0, 0, 70);
    text-transform: uppercase;
    border: outset 2px black;
}

.modiCanc button:hover {
    transition: 0.2s;
    background-color: rgba(255, 255, 255, 0.90);
    border: outset 2px white;
    border-radius: 10px;
}

.titleDesc {
    width: 100%;
    margin: 0;
    margin-top: -10px;
    font-family: sans-serif;
    font-size: 15px;
}

#modification-title {
    text-align: center;
    text-transform: uppercase;
    font-family: sans-serif;
    font-size: 30px;
    font-weight: bold;
    margin-top: 10px;
    margin-bottom: 0;
    color: rgb(0, 0, 50);
}

.edit-p {
    font-family: sans-serif;
    font-size: 18px;
    text-align: center;
    color: rgb(0, 0, 50);
}

#title-input {
    background-color: rgba(255, 255, 255, 0.8);
    font-size: 18px;
    box-shadow: 0px -3px 4px rgb(20, 100, 120, 0.3);
    border-radius: 5px;
}

#title-input:focus {
    border-radius: 8px;
}

#description-input {
    max-width: 100%;
    min-width: 100%;
    min-height: 40px;
    max-height: 40vh;
    background-color: rgba(255, 255, 255, 0.8);
    font-size: 18px;
    box-shadow: 0px -2px 4px rgb(20, 100, 120, 0.3);
    border-radius: 5px;
}

#description-input:focus {
    border-radius: 8px;
}

.none {
    display: none;
}

.divColors {
    text-align: center;
    justify-content: center;
    display: flex;
}

.chooseColor {
    width: 60%;
    margin-top: 10.5%;
}

#color-input {
    width: 60%;
    height: 50%;
    font-size: 20px;
    text-align: center;
    align-items: center;
    display: flex;
    justify-content: center;
    margin-top: 10%;
}

.max-length {
    padding: 0px;
    font-size: 14px;
    margin: 0px;
    font-family: sans-serif;
    color: rgb(50, 50, 50);
}

li {
    cursor: pointer;
}

#login-popup {
    position: fixed;
    width: 100%;
    height: 30px;
    display: none;
    flex-direction: column;
    top: 100px;
    justify-content: top;
    align-items: center;
    left: 0%;
}

#user-input {
    background-color: rgba(255, 255, 255, 0.8);
    font-size: 18px;
    box-shadow: 0px -3px 4px rgb(20, 100, 120, 0.3);
    border-radius: 5px;
}

#user-input:focus {
    border-radius: 8px;
}

#password-input {
    max-width: 100%;
    min-width: 100%;
    height: 20px;
    background-color: rgba(255, 255, 255, 0.8);
    font-size: 18px;
    box-shadow: 0px -2px 4px rgb(20, 100, 120, 0.3);
    border-radius: 5px;
}

#password-input:focus {
    border-radius: 8px;
}

